// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`select-wrapper dropdown accessibility should expose correct accessibility tree if description is set 1`] = `
Object {
  "description": "Some description",
  "haspopup": "listbox",
  "name": "Option A, Some label",
  "role": "combobox",
}
`;

exports[`select-wrapper dropdown accessibility should expose correct accessibility tree if open/closed: After click 1`] = `
Object {
  "expanded": true,
  "haspopup": "listbox",
  "name": "Option A, Some label",
  "role": "combobox",
}
`;

exports[`select-wrapper dropdown accessibility should expose correct accessibility tree if open/closed: Initially 1`] = `
Object {
  "haspopup": "listbox",
  "name": "Option A, Some label",
  "role": "combobox",
}
`;

exports[`select-wrapper dropdown accessibility should expose correct accessibility tree if rendered with optgroups 1`] = `
Object {
  "children": Array [
    Object {
      "haspopup": "listbox",
      "name": "Option A, Some label",
      "role": "combobox",
    },
    Object {
      "children": Array [
        Object {
          "role": "none",
        },
      ],
      "role": "none",
    },
    Object {
      "children": Array [
        Object {
          "name": "Some optgroup label 1",
          "role": "StaticText",
        },
        Object {
          "children": Array [
            Object {
              "name": "Option A",
              "role": "StaticText",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "role": "none",
            },
          ],
          "name": "Option A",
          "role": "option",
          "selected": true,
        },
        Object {
          "children": Array [
            Object {
              "name": "Option B",
              "role": "StaticText",
            },
          ],
          "name": "Option B",
          "role": "option",
        },
        Object {
          "name": "Some optgroup label 1",
          "role": "StaticText",
        },
        Object {
          "children": Array [
            Object {
              "name": "Option A",
              "role": "StaticText",
            },
          ],
          "name": "Option A",
          "role": "option",
        },
        Object {
          "children": Array [
            Object {
              "name": "Option B",
              "role": "StaticText",
            },
          ],
          "name": "Option B",
          "role": "option",
        },
      ],
      "name": "Some label",
      "orientation": "vertical",
      "role": "listbox",
    },
  ],
  "name": "",
  "role": "generic",
}
`;

exports[`select-wrapper dropdown accessibility should expose correct accessibility tree in error state 1`] = `
Object {
  "haspopup": "listbox",
  "name": "Option A, Some label. Some error message",
  "role": "combobox",
}
`;

exports[`select-wrapper dropdown accessibility should expose correct accessibility tree on selected custom option on click: Initially option A 1`] = `
Object {
  "name": "Option A",
  "role": "option",
  "selected": true,
}
`;

exports[`select-wrapper dropdown accessibility should expose correct accessibility tree on selected custom option on click: Initially option B 1`] = `
Object {
  "name": "Option B",
  "role": "option",
}
`;

exports[`select-wrapper dropdown accessibility should expose correct accessibility tree on selected custom option on click: Option A after click 1`] = `
Object {
  "name": "Option A",
  "role": "option",
}
`;

exports[`select-wrapper dropdown accessibility should expose correct accessibility tree on selected custom option on click: Option B after click 1`] = `
Object {
  "name": "Option B",
  "role": "option",
  "selected": true,
}
`;

exports[`select-wrapper dropdown accessibility should expose correct initial accessibility tree and aria properties 1`] = `
Object {
  "children": Array [
    Object {
      "haspopup": "listbox",
      "name": "Option A, Some label",
      "role": "combobox",
    },
    Object {
      "children": Array [
        Object {
          "role": "none",
        },
      ],
      "role": "none",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "name": "Option A",
              "role": "StaticText",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "role": "none",
            },
          ],
          "name": "Option A",
          "role": "option",
          "selected": true,
        },
        Object {
          "children": Array [
            Object {
              "name": "Option B",
              "role": "StaticText",
            },
          ],
          "disabled": true,
          "name": "Option B",
          "role": "option",
        },
        Object {
          "children": Array [
            Object {
              "name": "Option C",
              "role": "StaticText",
            },
          ],
          "name": "Option C",
          "role": "option",
        },
      ],
      "name": "Some label",
      "orientation": "vertical",
      "role": "listbox",
    },
  ],
  "name": "",
  "role": "generic",
}
`;
